Bug 1526909 - Perf alerts missing color indicators add CSS for progress bar colors and gt and ls symbols that was erroneously removed

--- a/ui/css/perf.css
+++ b/ui/css/perf.css
@@ -412,6 +412,25 @@ th {
   width: 160px;
   text-align: right;
 }
+/* TODO replace with bootstrap colors */
+.bar {
+  height: 1em;
+  margin-top: 0.25em;
+  margin-bottom: 5px;
+  background-color: #bbb;
+}
+
+.bar-scale {
+  background-color: #eee;
+}
+
+.bar-improvement {
+  background-color: green;
+}
+
+.bar-regression {
+  background-color: red;
+}
 
 /* Table widths for alerts */
 td.alert-checkbox {
